# plagiarism-api

./: .editorconfig  .gitignore  DEPLOY.md  README.md  docker-compose.yml
backend/: Dockerfile  README.md  config.yml  pyproject.toml  requirements.txt
backend/backend/: main.py
backend/backend/api/: encoder.py  model.py  prediction.py
backend/backend/api/cat/: train.py
backend/backend/api/lgb_wrapper/: ensemble.py
backend/backend/routes/: all.py  data.py  predict.py
backend/backend/utils/: load_yml.py
backend/docs/: SPEC.md
modeling/: README.md  pyproject.toml
